# DogeAPI

./: .appcd.yml  .dockerignore  .editorconfig  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  atlantis.yaml  docker-compose.yaml  main.py  now.json  requirements.txt  tox.ini
.appcd/: manifest.json
.github/: FUNDING.yml  Secrets Sync Action.yml  api.json  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: admin.yaml  appcd-iac-pr-diff.yml  backend.yaml  build.yml  codeql-analysis.yml  deploy.yml  docker-publish.yml  frontend.yaml  ossar-analysis.yml
admin/: .env.example  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json  vitest.config.ts
api/: blog.py  user.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2d913b3b2164_p7_oauth_accounts_table.py  790160f63ff0_p5_audit_logs_drop_fks.py  91177bbb192d_p10_ai_threads_ai_messages.py  a3ebab3d4846_p9_subscriptions_table.py  c44e70d6b946_p1_initial_users_table.py  cd85e4737f65_p4_api_keys_table.py  d5a5e57d9e13_p5_audit_logs_table.py  d5ae679a86c1_p10b_ai_message_cost_and_metadata.py  e95bc767484f_p2_organizations_memberships_invitations.py
backend/src/dogeapi/: __init__.py  cli.py  db.py  deps.py  exceptions.py  main.py  security.py  settings.py
backend/src/dogeapi/admin/: __init__.py  dependencies.py  router.py  schemas.py
backend/src/dogeapi/ai/: __init__.py  agent.py  agents.py  examples.py  gateway.py  quota.py  router.py  schemas.py  service.py
backend/src/dogeapi/api_keys/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/src/dogeapi/audit_log/: __init__.py  middleware.py  router.py  schemas.py  service.py
backend/src/dogeapi/auth/: __init__.py  password_reset.py  passwords.py  router.py  schemas.py  security.py  service.py  tokens.py
backend/src/dogeapi/billing/: __init__.py  limits.py  router.py  service.py
backend/src/dogeapi/email/: __init__.py  adapter.py
backend/src/dogeapi/magic_link/: __init__.py  router.py  service.py
backend/src/dogeapi/models/: __init__.py  ai.py  api_key.py  audit_log.py  base.py  invitation.py  membership.py  oauth_account.py  organization.py  subscription.py  user.py
backend/src/dogeapi/oauth/: __init__.py  client.py  router.py  service.py
backend/src/dogeapi/observability/: __init__.py
backend/src/dogeapi/organizations/: __init__.py  invitations.py  permissions.py  router.py  schemas.py  service.py  slug.py
backend/src/dogeapi/rate_limit/: __init__.py  backend.py  deps.py  middleware.py
backend/tests/: conftest.py  test_admin.py  test_ai_chat.py  test_ai_gateway.py  test_api_keys.py  test_audit_log.py  test_auth.py  test_billing.py  test_cli_admin.py  test_logfire.py  test_magic_link.py  test_meta.py  test_oauth.py  test_organizations.py  test_password_reset.py  test_pydantic_agent.py  test_rate_limit.py  test_rbac.py  test_settings_readiness.py
core/: auth.py  blog.py  user.py
database/: blog.db  configuration.py  db.ini
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json
gitops/dev/: dogeapi.yaml
infra/: docker-compose.yml
models/: models.py
schema/: hash.py  oa2.py  schemas.py  token.py
static/: main.js  style.css
templates/: index.html
(+104 files in other folders)
