[project]
name = "dogeapi"
version = "0.1.0"
description = "Multi-tenant SaaS boilerplate built on FastAPI + authx"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Yasser Tahiri", email = "hello@yezz.me" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "authx==1.6.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.17",
    "email-validator>=2.2.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
email = [
    "resend>=2.4.0",
    "aiosmtplib>=3.0.2",
]
oauth = [
    "authlib>=1.3.2",
    "itsdangerous>=2.2.0",
]
ai = [
    "pydantic-ai>=0.0.13",
    "tiktoken>=0.8.0",
]
stripe = [
    "stripe>=11.2.0",
]
logfire = [
    "logfire[fastapi,sqlalchemy,redis,httpx]>=4.32.1",
]
all = [
    "dogeapi[email,oauth,ai,stripe,logfire]",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.0",
    "respx>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dogeapi"]

# ─── Tooling ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI Depends() in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "N802"]
"alembic/versions/*" = ["E501", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["alembic/versions/", "tests/"]

[[tool.mypy.overrides]]
module = ["resend.*", "stripe.*", "authlib.*", "logfire.*", "fastapi_llm_gateway.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "integration: tests requiring postgres/redis (deselect with -m 'not integration')",
    "slow: slow tests",
    "feature_flags: override FEATURE_* flags for this test (kwargs)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
    "ignore:authlib.jose:UserWarning",
    "ignore::UserWarning:authlib",
]

[tool.coverage.run]
source = ["src/dogeapi"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
